--- a/HR/WebContent/CSS/ClientRegisterStyle.css
+++ b/HR/WebContent/CSS/ClientRegisterStyle.css
@@ -1,66 +1,45 @@
 body {
-  font-family: Arial, Helvetica, sans-serif;
-  background-color: white;
+	background-color: #323F6C;
+	color: #323F6C;
 }
 
 * {
-  box-sizing: border-box;
- display: inline-block;
+	box-sizing: border-box;
 }
 
 /* Add padding to containers */
 .container {
-  padding: 16px;
-  background-color: white;
+	margin: 0 auto;
+	border-radius: 5px;
+	padding: 20px;
+	width: 40%;
+	background-color: white;
 }
-
 
 /* Full-width input fields */
 input[type=text], input[type=password] {
-  width: 100%;
-  padding: 15px;
-  margin: 5px 0 22px 0;
-  display: inline-block;
-  border: none;
-  
-  background: #f1f1f1;
-}
-
-input[type=text]:focus, input[type=password]:focus {
-  background-color: #ddd;
-  outline: none;
-}
-
-/* Overwrite default styles of hr */
-hr {
-  border: 1px solid #f1f1f1;
-  margin-bottom: 25px;
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 100%;
+	padding: 15px;
+	margin: 5px 0 22px 0;
+	display: inline-block;
+	border: none;
+	background: #f1f1f1;
 }
 
 /* Set a style for the submit button */
 .registerbtn {
-  background-color: #001F88;
-  color: white;
-  padding: 16px 20px;
-  margin: 8px 0;
-  border: none;
-  cursor: pointer;
-  width: 100%;
-  opacity: 0.9;
+	background-color: #2D3A97;
+	color: white;
+	padding: 16px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
 }
 
 .registerbtn:hover {
-  opacity: 1;
+	opacity: 1;
 }
-
-/* Add a blue text color to links */
-a {
-  color: dodgerblue;
-}
-
-/* Set a grey background color and center the text of the "sign in" section */
-.signin {
-  background-color: #f1f1f1;
-  text-align: center;
-}
-
