--- a/HR/WebContent/CSS/UserProfileStyle.css
+++ b/HR/WebContent/CSS/UserProfileStyle.css
@@ -15,14 +15,14 @@ div{
 	position: relative;
 	background-color: #E5E7E9;
 	left: 20px;
-	width: 200px;
-	height: 350px;
+	max-width: 15%;
+	max-height: 20%;
 	float: left;
 }
 
 #profileImage {
-	height: 100%;
 	width: 100%;
+	height: 60%;
 }
 
 .workExpereience {
