--- a/HR/WebContent/CSS/VacancyCartStyle.css
+++ b/HR/WebContent/CSS/VacancyCartStyle.css
@@ -1,8 +1,8 @@
-@charset "ISO-8859-1";
 .vacancy {
-  width: 40%;
+  width: 70%;
   padding: 20px;
   margin-top: 20px;
+  margin-left: 80px;
   background-color: #f4f4f4;
 }
 
@@ -16,7 +16,7 @@
   overflow: hidden;
 }
 
-ol {
+.unstyled-list ol {
   display: block;
   list-style-type: decimal;
   margin-block-start: 1em;
@@ -174,4 +174,82 @@ ul.horizontal-list li {
   padding: 15px 40px;
   position:relative;
   left: 40%;
+}
+
+.update {
+  left: 30%;
+  padding: 7px 20px;
+}
+
+
+.split {
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: row;
+    flex-direction: row;
+    position: relative
+    margin: auto;
+}
+
+.vacancies {
+  float: right;
+  width: 82%;
+}
+
+.split_sidebar {
+  width: 18%;
+  height: 100%;
+  float: left;
+}
+
+.titles {
+    font-family: Montserrat;
+    font-size: 30px;
+    font-weight: bold;
+    color: #0a3251;
+    margin-bottom: 30px;
+
+}
+
+.vacancy_tytle {
+  margin-left: 77px;
+}
+
+.filter {
+  background-color: #f4f4f4;
+}
+
+.filter_header {
+    padding: 0 17px;
+    padding-top: 0px;
+    padding-right: 17px;
+    padding-bottom: 0px;
+    padding-left: 17px;
+    display: inline-table;
+    box-sizing: border-box;
+}
+
+.clear_filter {
+    font-family: Roboto;
+    font-size: 20px;
+    font-weight: 500;
+    text-align: right;
+    color: #99a8b4;
+    float: left;
+    background: transparent;
+    border: none;
+
+}
+
+.clear_filter {
+  margin-top: 20px;
+  margin-left: 65px;
+  margin-bottom: 20px;
+  clear: both
+}
+
+.filter_body h5 {
+  margin-left: 10px;
+  font-size: 20px;
+  font-style: italic;
 }
