--- a/HR/WebContent/CSS/ContactPageStyle.css
+++ b/HR/WebContent/CSS/ContactPageStyle.css
@@ -8,13 +8,13 @@
 
 .subheader {
 	text-align: center;
-	padding-bottom: 10%;
+	padding-bottom: 3%;
 }
 
 .contacts-features {
 	text-align: center;
 	margin: auto;
-	width: 100%;
+	width: 70%;
 	display: flex;
 }
 
@@ -28,4 +28,4 @@ img {
 	height: 30%;
 	width: auto;
 	object-fit: contain;
-}â€‹
+}€‹
