--- a/HR/.settings/org.eclipse.wst.common.component
+++ b/HR/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
+        
     <wb-module deploy-name="HR">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
+        <dependent-module archiveName="json-20180813.jar" deploy-path="/WEB-INF/lib" handle="module:/classpath/lib//home/demetre/Desktop/json-20180813.jar">
+            <dependency-type>uses</dependency-type>
+        </dependent-module>
+                
         <property name="context-root" value="HR"/>
+                
         <property name="java-output-path" value="/HR/build/classes"/>
+            
     </wb-module>
+    
 </project-modules>
