Main Page added

--- a/HR/WebContent/CSS/MainPageStyle.css
+++ b/HR/WebContent/CSS/MainPageStyle.css
@@ -1,18 +1,118 @@
-body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  	max-width: 100%;
+  	width: 100%;
+  	position: relative;
+  	margin: auto;
 }
 
-.container{
-		background-color: red;
-	
+.container {
+	width: 24%;
+	height: 33%;
+	background: white;
+	opacity: 0.97;
+  	position: absolute;
+  	top: 33%;
+  	left: 17%;
+  	text-align: center;
+  	border-radius: 20px;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+}
+
+.button-container {
+	padding: 13%;
+}
+
+button {
+	opacity: 1;
+	width: 70%;
+	font-family: "Roboto";
+	font-style: italic;
+	color: white;
+	font-size: 24px;
+	border: none;
+	padding: 15px 30px;
+	background-color: #323F6C;
+	cursor: pointer;
+	margin: 4px 2px;
+	border-radius: 12px;
+	text-align: center;
+}
+
+button:hover {
+	transform: scale(1.08)
+}
+
+/* Hide the images by default */
+.mySlides {
+  	display: none;
+}
+
+/* Next & previous buttons */
+.prev, .next {
+  	cursor: pointer;
+  	position: absolute;
+  	top: 50%;
+  	width: auto;
+  	margin-top: -22px;
+  	padding: 16px;
+  	color: white;
+  	font-weight: bold;
+  	font-size: 18px;
+  	transition: 0.6s ease;
+  	border-radius: 0 3px 3px 0;
+  	user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+  	right: 0;
+  	border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover, .next:hover {
+  	background-color: rgba(0,0,0,0.8);
+}
+
+/* The dots/bullets/indicators */
+.dot {
+  	cursor: pointer;
+  	height: 15px;
+  	width: 15px;
+  	margin: 0 2px;
+  	background-color: #bbb;
+  	border-radius: 50%;
+  	display: inline-block;
+  	transition: background-color 0.6s ease;
+}
+
+.active, .dot:hover {
+  	background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+  	-webkit-animation-name: fade;
+  	-webkit-animation-duration: 4.0s;
+  	animation-name: fade;
+  	animation-duration: 4.0s;
+}
+
+@-webkit-keyframes fade {
+  	from {opacity: .4} 
+  	to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 img {
-    padding: 0;
-    display: block;
-    margin: 0 auto;
-    max-height: 60%;
-    max-width: 60%;
+	height: 100%;
+	width: auto;
+	object-fit: contain;
 }
