--- a/HR/WebContent/CSS/UserProfileStyle.css
+++ b/HR/WebContent/CSS/UserProfileStyle.css
@@ -1,5 +1,5 @@
 body {
-	
+	background-color: #FEFEFE;
 }
 div{
 	border: none;
@@ -7,6 +7,7 @@ div{
 }
 
 .container {
+	padding: 5px;
 	position: relative;
 	top: 15px;
 }
@@ -24,29 +25,42 @@ div{
 	width: 100%;
 	height: 60%;
 }
+.mainInfo{
+	padding: 5px;
+}
 
+.rightSide{
+	background-color: #E5E7E9;
+	position: relative;
+	float: right;
+	margin-right: 100px;
+	padding: 10px;
+	width: 50%;
+}
 .workExpereience {
-	position: relative;
-	float: right;
-	right: 20px;
-	background-color: #E5E7E9;
-	width: 700px;
-	height: 150px;
-}
-.workExpereience p{
-	padding-left: 10px;
+	padding: 5px;
+	margin-bottom: 5%;
+	background-color: white;
 }
 
-.education {
-	position: relative;
-	top: 10px;
-	float: right;
-	right: 20px;
-	background-color: #E5E7E9;
-	width: 700px;
-	height: 150px;
+
+.educationClass{
+	padding: 5px;
+	background-color: white;
+	margin-bottom: 5%;
 }
-.education p{
-	padding-left: 10px;
+
+
+#title{
+	margin-left: 5px;
+	
 }
+
+.about{
+	background-color: white;
+	margin-bottom: 5%;
+	padding: 5px;
+}
+
+
 
