--- a/HR/WebContent/CSS/VacancyPageStyle.css
+++ b/HR/WebContent/CSS/VacancyPageStyle.css
@@ -165,3 +165,17 @@ ul.horizontal-list li {
 .vacancy_details_right {
   float: right;
 }
+
+#edit {
+  font-family: Roboto;
+  font-size: 20px;
+  font-weight: 500;
+  text-align: right;
+  color: #99a8b4;
+  background: transparent;
+  border: none;
+  position: relative;
+  float: right;
+  margin-top: 20px;
+  margin-left: 20px;
+}
