--- a/HR/WebContent/CSS/MainPageStyle.css
+++ b/HR/WebContent/CSS/MainPageStyle.css
@@ -25,13 +25,13 @@
 	padding: 13%;
 }
 
-button {
+.my-button {
 	opacity: 1;
 	width: 70%;
 	font-family: "Roboto";
 	font-style: italic;
 	color: white;
-	font-size: 24px;
+	font-size: 100%;
 	border: none;
 	padding: 15px 30px;
 	background-color: #323F6C;
@@ -41,56 +41,13 @@ button {
 	text-align: center;
 }
 
-button:hover {
+.my-button:hover {
 	transform: scale(1.08)
 }
 
 /* Hide the images by default */
 .mySlides {
   	display: none;
-}
-
-/* Next & previous buttons */
-.prev, .next {
-  	cursor: pointer;
-  	position: absolute;
-  	top: 50%;
-  	width: auto;
-  	margin-top: -22px;
-  	padding: 16px;
-  	color: white;
-  	font-weight: bold;
-  	font-size: 18px;
-  	transition: 0.6s ease;
-  	border-radius: 0 3px 3px 0;
-  	user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  	right: 0;
-  	border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  	background-color: rgba(0,0,0,0.8);
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  	cursor: pointer;
-  	height: 15px;
-  	width: 15px;
-  	margin: 0 2px;
-  	background-color: #bbb;
-  	border-radius: 50%;
-  	display: inline-block;
-  	transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  	background-color: #717171;
 }
 
 /* Fading animation */
@@ -112,7 +69,6 @@ button:hover {
 }
 
 img {
+	width: 100%;
 	height: 100%;
-	width: auto;
-	object-fit: contain;
 }
