--- a/HR/WebContent/CSS/SettingsStyle.css
+++ b/HR/WebContent/CSS/SettingsStyle.css
@@ -1,7 +1,18 @@
 body {
 	box-sizing: border-box;
+	border: 1px solid #ccc;
+	border-radius: 4px;
 }
-
+input {
+	border: 1px solid #ccc;
+	border-radius: 4px;
+	width: 100%;
+	padding: 15px;
+	margin: 5px 0 22px 0;
+	display: inline-block;
+	border: none;
+	background: #f1f1f1;
+}
 .leftMenu {
 	position: relative;
 	margin: 0;
@@ -51,4 +62,18 @@ label {
 }
 
 
+button {
+	background-color: #2D3A97;
+	color: white;
+	padding: 16px 20px;
+	margin: 8px 0;
+	border: none;
+	cursor: pointer;
+	width: 100%;
+	opacity: 0.9;
+}
+textarea {
+	 width: 40em;
+	 height: 5em;
+}
 
