--- a/HR/WebContent/CSS/AboutStyle.css
+++ b/HR/WebContent/CSS/AboutStyle.css
@@ -1,4 +1,16 @@
+@charset "ISO-8859-1";
+
 * {box-sizing:border-box}
+
+.subheader {
+
+}
+
+.about-us {
+	width: 100%;
+	padding-left: 10%;
+	padding-right: 10%;
+}
 
 /* Slideshow container */
 .slideshow-container {
@@ -9,40 +21,19 @@
 }
 
 .container {
-	width: 24%;
-	height: 33%;
+	font-family: "Roboto";
+	font-size: 18px;
+	width: 40%;
+	height: 70%;
 	background: white;
 	opacity: 0.97;
   	position: absolute;
-  	top: 33%;
-  	left: 17%;
+  	top: 15%;
+  	left: 30%;
+  	padding-top: 2%;
   	text-align: center;
   	border-radius: 20px;
   	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
-}
-
-.button-container {
-	padding: 13%;
-}
-
-.my-button {
-	opacity: 1;
-	width: 70%;
-	font-family: "Roboto";
-	font-style: italic;
-	color: white;
-	font-size: 24px;
-	border: none;
-	padding: 15px 30px;
-	background-color: #323F6C;
-	cursor: pointer;
-	margin: 4px 2px;
-	border-radius: 12px;
-	text-align: center;
-}
-
-.my-button:hover {
-	transform: scale(1.08)
 }
 
 /* Hide the images by default */
@@ -71,4 +62,5 @@
 img {
 	width: 100%;
 	height: 100%;
-}
+	object-fit: contain;
+}€‹
