--- a/HR/WebContent/CSS/ContactPageStyle.css
+++ b/HR/WebContent/CSS/ContactPageStyle.css
@@ -1,10 +1,6 @@
 @charset "ISO-8859-1";
 
-.container {
-	text-align: center;
-	width: 100%;
-	height: 100%;
-}
+* {box-sizing:border-box}
 
 .subheader {
 	text-align: center;
@@ -14,18 +10,65 @@
 .contacts-features {
 	text-align: center;
 	margin: auto;
-	width: 70%;
-	display: flex;
+	width: 80%;	
 }
 
 .contact-type {
-    width: 100%;
+    width: 30%;
 	height: auto;
 	text-align: center;
+	display: inline-block;
+}
+
+/* Slideshow container */
+.slideshow-container {
+  	max-width: 100%;
+  	width: 100%;
+  	position: relative;
+  	margin: auto;
+}
+
+.container {
+	font-family: "Roboto";
+	font-size: 18px;
+	width: 60%;
+	height: 70%;
+	background: white;
+	opacity: 0.97;
+  	position: absolute;
+  	top: 15%;
+  	left: 20%;
+  	padding-top: 2%;
+  	text-align: center;
+  	border-radius: 20px;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+}
+
+/* Hide the images by default */
+.mySlides {
+  	display: none;
+}
+
+/* Fading animation */
+.fade {
+  	-webkit-animation-name: fade;
+  	-webkit-animation-duration: 2.5s;
+  	animation-name: fade;
+  	animation-duration: 2.5s;
+}
+
+@-webkit-keyframes fade {
+  	from {opacity: .4} 
+  	to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
 }
 
 img {
-	height: 30%;
-	width: auto;
+	width: 100%;
+	height: 100%;
 	object-fit: contain;
 }€‹
