--- a/HR/WebContent/CSS/RegisterPageStyle.css
+++ b/HR/WebContent/CSS/RegisterPageStyle.css
@@ -1,45 +1,84 @@
-body {
-	background-image: url("back.jpg");
-	background-size: 100%;
+* {box-sizing:border-box}
+
+/* Slideshow container */
+.slideshow-container {
+  	max-width: 100%;
+  	width: 100%;
+  	position: relative;
+  	margin: auto;
 }
 
-h1 {
-	font-style: oblique;
+.container {
+	width: 30%;
+	height: 60%;
+	background: white;
+	opacity: 0.97;
+  	position: absolute;
+  	top: 20%;
+  	left: 35%;
+  	text-align: center;
+  	border-radius: 20px;
+  	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.15), 0 6px 20px 0 rgba(0, 0, 0, 0.15);
+}
+
+.subheader {
 	text-align: center;
-	color: white;
+	font-family: "Roboto";
+	font-size: 1.1vw;
+	padding-left: 10%;
+	padding-right: 10%;
+	padding-top: 2%;
+	padding-bottom: 2%;
 }
 
-button[id=company] {
-	left: 150px;
-	float: left; /* Header 1 goes to left of page */
+.button-container {
+	padding: auto;
 }
 
-button[id=worker] {
-	right: 150px;
-	float: right; /* Header 2 goes to right of page */
-}
-
-button {
+.my-button {
+	opacity: 1;
+	width: 60%;
+	font-family: "Roboto";
 	font-style: italic;
 	color: white;
-	font-size: 20px;
+	font-size: 1.3vw;
 	border: none;
-	padding: 15px 30px;
+	padding: 5% 10%;
 	background-color: #323F6C;
 	cursor: pointer;
 	margin: 4px 2px;
-	position: absolute;
-	top: 50%;
 	border-radius: 12px;
+	text-align: center;
 }
 
-button:hover {
-	transform: scale(1.25)
+.my-button:hover {
+	transform: scale(1.08)
 }
 
-<
-.container {
-	clear: both;
+/* Hide the images by default */
+.mySlides {
+  	display: none;
+}
 
-	/* container won't collapse, next element outside container won't float up */
+/* Fading animation */
+.fade {
+  	-webkit-animation-name: fade;
+  	-webkit-animation-duration: 2.5s;
+  	animation-name: fade;
+  	animation-duration: 2.5s;
+}
+
+@-webkit-keyframes fade {
+  	from {opacity: .4} 
+  	to {opacity: 1}
+}
+
+@keyframes fade {
+  from {opacity: .4} 
+  to {opacity: 1}
+}
+
+img {
+	width: 100%;
+	height: 100%;
 }
