--- a/HR/WebContent/CSS/ContactPageStyle.css
+++ b/HR/WebContent/CSS/ContactPageStyle.css
@@ -2,6 +2,12 @@
 
 * {box-sizing:border-box}
 
+html, body {
+	margin: 0; 
+	height: 100%; 
+	overflow: hidden
+}
+
 .subheader {
 	text-align: center;
 	padding-bottom: 3%;
