--- a/HR/WebContent/CSS/Login.css
+++ b/HR/WebContent/CSS/Login.css
@@ -19,7 +19,7 @@ form {
 	
 }
 
-input {
+.input-field {
 	position: relative;
 	top: 20px;
 	border: none;
@@ -46,4 +46,11 @@ button {
 }
 .hidden{
    visibility:hidden;
+}
+.field-icon {
+  float: right;
+  margin-left: -25px;
+  margin-top: -25px;
+  position: relative;
+  z-index: 2;
 }
