--- a/HR/WebContent/CSS/CompaniesList.css
+++ b/HR/WebContent/CSS/CompaniesList.css
@@ -1,10 +1,10 @@
-
 .container {
+	background-color: white;
 	padding: 20px;
 }
 
 .cardClass {
-cursor: pointer;	
+	cursor: pointer;	
 	margin-left: 40px;
  	transition: transform .2s;
 	border: none;
@@ -19,10 +19,16 @@ cursor: pointer;
 }
 
 .labClass{
-	cursor: pointer;
 	vertical-align: middle;
+	cursor: pointer;
 	padding: 20px;
 }
+
+#name{
+}
+#essence{
+}
+
 
 #profileImage {
 	width: 50px;
